# library

./: .gitignore  README.md  pyproject.toml  requirements.txt
Client/: index.html
Client/css/: custom.css
Client/html/: add_book.html  home.html  library.html  login.html  newuser.html
Client/js/: app.js
Client/js/controllers/: deprecated.js  home.js  login.js  newuser.js  services.js  upload.js
Server/: AddBookHandler.py  AuthCodeHandler.py  DeleteBookHandler.py  GetBooksHandler.py  LoginHandler.py  NewUserHandler.py  SearchHandler.py  URIParser.py  UpdateBookHandler.py  library-server.py  saveimage.py  upload_books.py
Server/static/css/: login.css  simple-sidebar.css
Server/static/html/: add_book.html  deprecated.html  disconnect.html  home.html  library.html  login.html  profile.html
Server/static/js/: app.js
Server/static/js/controllers/: deprecated.js  home.js  login.js  newuser.js  profile.js  search.js  services.js  stats.js
Server/templates/: index.html
agentic_library/: book.py  book_agent.py  db.py  deprecated.py  login.py  main.py  print_tables.py  schema.py  sidebar.py
test/: elastic_test.py  gapi_test.py  ocr_test.py  post_books.py  s3_test.py  saveimage.py  start_server.bat  upload_books.py  wiki_test.py
